# pop-launcher-cliphist-plugin

./: Cargo.toml
src/: main.rs
