[package]
name = "cliphist"
version = "0.2.0"
edition = "2024"

[dependencies]
fuzzy-matcher = "0.3"
pop-launcher-toolkit = { git = "https://github.com/pop-os/launcher" }
tokio = { version = "1", features = ["rt", "macros", "process", "io-std"] }

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
incremental = false
opt-level = "z"
strip = true
rpath = false
debug = false
debug-assertions = false
overflow-checks = false
